Fixed z-index on the  fade animation on on the main page

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -65,7 +65,7 @@ body {
 
           100% {
               opacity: 0;
-              z-index: 2;
+              z-index: 1;
           }
       }
 }
